--- a/main.html
+++ b/main.html
@@ -4,13 +4,21 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<nav> 
+	<a href="https://meet.google.com/nnu-pddv-roa">Home</a>
+	<a href="https://meet.google.com/nnu-pddv-roa">About us</a>
+	<a href="https://meet.google.com/nnu-pddv-roa">Contact us</a>
+	</nav>
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+<h3>3 random audios</h3>
+	<audio controls src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3"></audio>
+	<audio controls src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg"></audio>
+	<audio controls src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3"></audio>
 </body>
 
 </html>
