--- a/main.html
+++ b/main.html
@@ -6,15 +6,15 @@
 	
 	<link rel="stylesheet" href="styles.css">
 	<nav>
-		<ul> 
-	<a href="https://meet.google.com/nnu-pddv-roa">Home</a>
-	<a href="https://meet.google.com/nnu-pddv-roa">About us</a>
-	<a href="https://meet.google.com/nnu-pddv-roa">Contact us</a>
+	<ul> 
+	<li><a href="https://meet.google.com/nnu-pddv-roa">Home</a></li>
+	<li><a href="https://meet.google.com/nnu-pddv-roa">About us</a></li>
+	<li><a href="https://meet.google.com/nnu-pddv-roa">Contact us</a></li>
 	<h3>3 random audios</h3>
 	<audio controls src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3"></audio>
 	<audio controls src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg"></audio>
 	<audio controls src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3"></audio>
-	</ul>
+</ul>
 	</nav>
 </head>
 
